# docker_poetry

./: Dockerfile  docker-compose.yml  pyproject.toml
.github/workflows/: django.yml
src/: db.sqlite3  entrypoint.sh
src/dockerproject/: asgi.py  settings.py  urls.py  wsgi.py
